infrastructure/prometheus-stack/mikrotik-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mikrotik-exporter
  namespace: monitoring
  labels:
    app: mikrotik-exporter
spec:
  selector:
    app: mikrotik-exporter
  ports:
    - name: metrics
      port: 9436
      targetPort: 49090
